deploy: 76ddc5b32011621128b66555fcebb0ac788b206d

--- a/blockchain/blockchain.html
+++ b/blockchain/blockchain.html
@@ -182,7 +182,8 @@
                 </div>
                 <main>
                     
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
