--- a/blockchain/fundamentals.html
+++ b/blockchain/fundamentals.html
@@ -234,7 +234,8 @@
 <p>在区块链上运行的应用程序 —— 通常被称为去中心化应用程序或 <code>dApp</code> —— 通常是使用前端框架编写的网络应用程序，但后端为智能合约，用于改变区块链状态。</p>
 <p>智能合约是在区块链上运行并在特定条件下代表用户执行交易的程序。开发人员可以编写智能合约，以确保以开发者编写的逻辑执行的交易的结果被记录下来，并且不能被篡改。然而，仅凭智能合约，开发人员无法访问区块链的一些底层功能 —— 如共识、存储或交易层 —— 相反，他们必须遵守链的既定规则和限制。智能合约开发人员通常接受这些限制作为权衡，从而加快开发时间，减少核心设计决策。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
