--- a/blockchain/substrate/substrate.html
+++ b/blockchain/substrate/substrate.html
@@ -184,7 +184,8 @@
                     <h1 id="substrate"><a class="header" href="#substrate">substrate</a></h1>
 <p>Learning......</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
