--- a/go/gin_zo.html
+++ b/go/gin_zo.html
@@ -381,7 +381,8 @@ pong
 </ol>
 <p>接下来我会抽时间持续更新这块，若大体完成我会在 github 上开源这个工具。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
