--- a/go/go.html
+++ b/go/go.html
@@ -185,7 +185,8 @@
 <h3 id="the-way-to-go"><a class="header" href="#the-way-to-go">the way to go</a></h3>
 <p><a href="https://github.com/unknwon/the-way-to-go_ZH_CN">GitHub - unknwon/the-way-to-go_ZH_CN: 《The Way to Go》中文译本，中文正式名《Go 入门指南》</a></p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
