--- a/go/pstash.html
+++ b/go/pstash.html
@@ -185,7 +185,8 @@
 <p>为了解决上一块内容最后的需求，我打算爆改 go-stash，使其满足我们的需求。下面是项目地址，我会持续更新。</p>
 <p><a href="https://github.com/M4n5ter/pstash">GitHub - M4n5ter/pstash</a></p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
