--- a/issues/mysql/mysql_issues.html
+++ b/issues/mysql/mysql_issues.html
@@ -208,7 +208,8 @@ find $backup_dir -mtime +7 -type f -name '*.sql' -exec rm -rf {} \;
 echo &quot;Backup Succeed Date:&quot; $(date +&quot;%Y-%m-%d %H:%M:%S&quot;)
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
