--- a/issues/nginx/nginx_issues.html
+++ b/issues/nginx/nginx_issues.html
@@ -243,7 +243,8 @@ location /abc/d {...}
 </blockquote>
 <p>所以 /abc/d 路径的请求不会被 /abc location 拦截。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
