--- a/other-categories/algorithm/algorithm.html
+++ b/other-categories/algorithm/algorithm.html
@@ -451,7 +451,8 @@ func reprOfValue(val reflect.Value) string {
 }
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
