--- a/other-categories/archlinux/archlinux.html
+++ b/other-categories/archlinux/archlinux.html
@@ -468,7 +468,8 @@ fc-cache
 echo &quot;Noto Emoji Font 安装成功! 你可能需要重启应用，比如 Chrome. 如果没什么变化说明你的字体本身已经包含 emoji.&quot;
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
