--- a/other-categories/aria2/aria2.html
+++ b/other-categories/aria2/aria2.html
@@ -334,7 +334,8 @@ sudo systemctl daemon-reload
 sudo systemctl enable --now aria2
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
