--- a/other-categories/croc/croc.html
+++ b/other-categories/croc/croc.html
@@ -237,7 +237,8 @@ croc 2151-school-biscuit-snow
 <p>relay 会读取一个连接中发送过来的内容，并直接将内容写入到另一个连接中。从这也能得出结论：croc 没有使用类似 nat hole punching 这样的技术，而是由中继服务器来转发传输内容，因此传输速度依旧会受到中继服务器的带宽限制。</p>
 <p>但是当两端互相可发现（比如处于同一个局域网内），<code>croc</code> 的 <code>--ip value</code> 可以允许接收方来指定发送方的 IP 来直接从接收方获取传输内容，这样就不会经过中继服务器了。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
