--- a/other-categories/git/git.html
+++ b/other-categories/git/git.html
@@ -341,7 +341,8 @@
 <pre><code>git push &lt;remote name&gt; &lt;branch&gt;
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
