--- a/other-categories/minio/minio.html
+++ b/other-categories/minio/minio.html
@@ -336,7 +336,8 @@ http {
 $ docker-compose up -d
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
