--- a/other-categories/postgres/postgres.html
+++ b/other-categories/postgres/postgres.html
@@ -381,7 +381,8 @@ sed -i -E 's/,?&quot;([A-Z0-9]+)&quot;:\{([^\}]+)},?//g' ~/.config/navicat/Premi
 <li><a href="https://www.postgresql.org/docs/current">Postgres Current Version Document</a></li>
 </ul>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
