--- a/other-categories/pre-commit/pre-commit.html
+++ b/other-categories/pre-commit/pre-commit.html
@@ -257,7 +257,8 @@ repos:
 $ pre-commit install
 </code></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
