--- a/print.html
+++ b/print.html
@@ -5719,7 +5719,8 @@ location /abc/d {...}
 <p><a href="https://github.com/meilisearch/meilisearch/discussions/2070">Experimental feature: auto-batching · Discussion #2070 · meilisearch/meilisearch · GitHub</a></p>
 <p>开启自动批处理 <code>--enable-auto-batching</code> 来提升索引速度。 </p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
