--- a/rust/mini-redis/async_in_depth.html
+++ b/rust/mini-redis/async_in_depth.html
@@ -744,7 +744,8 @@ async fn delay(dur: Duration) {
 }
 <span class="boring">}</span></code></pre></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
