--- a/rust/mini-redis/mini-redis.html
+++ b/rust/mini-redis/mini-redis.html
@@ -212,7 +212,8 @@ rustc 1.64.0 (a55dd71d5 2022-09-19)
 <h2 id="准备开始"><a class="header" href="#准备开始">准备开始</a></h2>
 <p>就是这样，一切准备就绪。转到下一页编写我们的第一个异步Rust应用程序。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
