--- a/rust/mini-redis/shared_state.html
+++ b/rust/mini-redis/shared_state.html
@@ -425,7 +425,8 @@ async fn increment_and_do_stuff(mutex: &amp;Mutex&lt;i32&gt;) {
 } // lock goes out of scope here
 <span class="boring">}</span></code></pre></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
