--- a/rust/mini-redis/spawning.html
+++ b/rust/mini-redis/spawning.html
@@ -519,7 +519,8 @@ async fn process(socket: TcpStream) {
 <p>我们现在可以获取和设置值，但是有一个问题：这些值在连接之间不共享。如果另一个套接字连接并尝试获取hello键，它将找不到任何东西。</p>
 <p>在下一节中，我们将为所有套接字实现持久化数据。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
