--- a/rust/mini-redis/streams.html
+++ b/rust/mini-redis/streams.html
@@ -413,7 +413,8 @@ stream! {
 }
 <span class="boring">}</span></code></pre></pre>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
