--- a/rust/tokio/bridging_with_sync_code.html
+++ b/rust/tokio/bridging_with_sync_code.html
@@ -183,7 +183,8 @@
                 <main>
                     <h1 id="bridging-with-sync-code"><a class="header" href="#bridging-with-sync-code">Bridging with sync code</a></h1>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
