--- a/rust/tokio/graceful_shutdown.html
+++ b/rust/tokio/graceful_shutdown.html
@@ -183,7 +183,8 @@
                 <main>
                     <h1 id="graceful-shutdown"><a class="header" href="#graceful-shutdown">Graceful Shutdown</a></h1>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
