--- a/rust/tokio/next_steps_with_tracing.html
+++ b/rust/tokio/next_steps_with_tracing.html
@@ -183,7 +183,8 @@
                 <main>
                     <h1 id="next-steps-with-tracing"><a class="header" href="#next-steps-with-tracing">Next steps with Tracing</a></h1>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
