--- a/rust/tokio/topics.html
+++ b/rust/tokio/topics.html
@@ -191,7 +191,8 @@
 <li><a href="https://m4n5ter.github.io/rust/tokio/next_steps_with_tracing.html">Next steps with Tracing</a></li>
 </ul>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
