--- a/404.html
+++ b/404.html
@@ -182,7 +182,8 @@
                     <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
 <p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
