--- a/issues/gitea/gitea_issues.html
+++ b/issues/gitea/gitea_issues.html
@@ -185,7 +185,8 @@
 <p>按 <a href="https://github.com/go-gitea/gitea/issues/18917#issuecomment-1052342880">#18917 中的一条回复</a> 中，发现没有 <code>LOCK</code> 文件，然后删除了 <code>data/queues/common</code> 后解决了该问题。</p>
 <p>该 issue 中提到推荐采用 <code>redis</code> 来做 <code>queue</code>，配置方式在 <a href="https://docs.gitea.io/en-us/config-cheat-sheet/#indexer-indexer">Config Cheat Sheet - Docs</a></p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
