--- a/other-categories/nc/nc.html
+++ b/other-categories/nc/nc.html
@@ -268,7 +268,8 @@ nc -lp 6666 -e /bin/bash
 <h2 id="更多功能请自行探索"><a class="header" href="#更多功能请自行探索">更多功能请自行探索</a></h2>
 <p><code>ncat</code> 提供了许多功能，这些功能可以相互组合，或者配合其它东西来使用，能玩出的花样是非常多的。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
