--- a/other-categories/other-categories.html
+++ b/other-categories/other-categories.html
@@ -183,7 +183,8 @@
                 <main>
                     <h1 id="other-categories"><a class="header" href="#other-categories">Other categories</a></h1>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
