--- a/rust/mini-redis/hello_tokio.html
+++ b/rust/mini-redis/hello_tokio.html
@@ -324,7 +324,8 @@ async fn main() {
 <p><code>Tokio</code> 有很多功能（<code>TCP</code>、<code>UDP</code>、<code>Unix sockets</code>、<code>timer</code>、<code>sync utilities</code>、<code>multiple scheduler types</code> 等）。并非所有应用程序都需要所有功能(<code>full</code>)。当尝试优化编译时间或最终应用程序占用空间时，应用程序可以决定只选择它用到的那些功能。</p>
 <p>目前，我们在依赖 <code>tokio</code> 时使用 <code>full</code> feature，来方便 code。</p>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
