--- a/rust/tokio/tokio.html
+++ b/rust/tokio/tokio.html
@@ -183,7 +183,8 @@
                 <main>
                     <h1 id="tokio"><a class="header" href="#tokio">Tokio</a></h1>
 
-                    <div id="giscus-container"></div>
+                    <!-- 暂时关闭评论 -->
+                    <!--<div id="giscus-container"></div>-->
                 </main>
 
                 <nav class="nav-wrapper" aria-label="Page navigation">
